Bug 1222888 - Implement MediaKeySession callable value. r=gerald