dom/media/eme/MediaKeySession.h
@@ -101,6 +101,14 @@ private:
   ~MediaKeySession();
 
   void UpdateKeyStatusMap();
+
+  bool IsCallable() const {
+    // The EME spec sets the "callable value" to true whenever the CDM sets
+    // the sessionId. When the session is initialized, sessionId is empty and
+    // callable is thus false.
+    return !mSessionId.IsEmpty();
+  }
+
   already_AddRefed<DetailedPromise> MakePromise(ErrorResult& aRv,
                                                 const nsACString& aName);
 
